Updated dashboard. Added another chart.

--- a/src/pages/goal-graphed/goal-graphed.html
+++ b/src/pages/goal-graphed/goal-graphed.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>goal-graphed</ion-title>
+    <ion-title>Progress Charts</ion-title>
   </ion-navbar>
 
 </ion-header>
