--- a/src/pages/goal-graphed/goal-graphed.html
+++ b/src/pages/goal-graphed/goal-graphed.html
@@ -11,7 +11,7 @@
 
     <ion-card>
       <ion-card-header>
-        Bar Chart
+        Workout History
       </ion-card-header>
       <ion-card-content>
         <canvas #barCanvas></canvas>
@@ -20,7 +20,7 @@
 
     <ion-card>
       <ion-card-header>
-        Doughnut Chart
+        Workout Level
       </ion-card-header>
       <ion-card-content>
         <canvas #doughnutCanvas></canvas>
@@ -29,7 +29,7 @@
 
     <ion-card>
       <ion-card-header>
-        Weight shown over time
+        Weight History
       </ion-card-header>
       <ion-card-content>
         <canvas #lineCanvas></canvas>
