--- a/src/pages/workout-history/workout-history.html
+++ b/src/pages/workout-history/workout-history.html
@@ -9,18 +9,29 @@
 
 <ion-content padding>
 
- <h3>Your Statistics</h3>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-title>Your Statistics</ion-card-title>
+		</ion-card-header>
+		<ion-card-content>
+			<p><b>Total Workouts:</b> {{workoutStats.countOfWorkout}}</p>
+ 			<p><b>Date of Last Workout:</b> {{workoutStats.lastWorkoutDay}}</p>
+		</ion-card-content>
+	</ion-card>
 
- <p id='displayItem'><b>Total Workouts:</b> {{workoutStats.countOfWorkout}}</p>
- <p id='displayItem'><b>Date of Last Workout:</b> {{workoutStats.lastWorkoutDay}}</p>
 
  <h3>Your Workout History</h3>
 
   <div *ngFor="let w of workoutName">
-  	<p id='displayItem'>
-  		<b>Date:</b> {{w.date}} <br/>
-  		<b>Workout:</b> {{w.name}}
-  	</p>
+
+  	<ion-card>
+  		<ion-card-header>
+  			<ion-card-title>{{w.name}}</ion-card-title>
+  		</ion-card-header>
+  		<ion-card-content>
+  			<p><b>Date completed:</b> {{w.date}}</p>
+  		</ion-card-content>
+  	</ion-card>
   </div>
 
 </ion-content>
