--- a/src/pages/goal-graphed/goal-graphed.html
+++ b/src/pages/goal-graphed/goal-graphed.html
@@ -9,6 +9,8 @@
 
 <ion-content padding>
 
+  <img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
     <ion-card>
       <ion-card-header>
         Workout History
