--- a/src/pages/onboarding/onboarding.html
+++ b/src/pages/onboarding/onboarding.html
@@ -8,6 +8,8 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 	<ion-slides #mySlider pager=false>
 		<ion-slide>
 				<h3>Set Workout Preferences</h3>
