--- a/src/pages/register-disclaimer/register-disclaimer.html
+++ b/src/pages/register-disclaimer/register-disclaimer.html
@@ -6,6 +6,8 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 	<h5>Please read the following before completing registration.</h5>
 
 	<h6>Health & Wellbeing</h6>
