--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,9 +6,7 @@
 
 <ion-content padding class="form-content">
 
-  <!--<img id='logoImg' alt="logo" src="../../assets/imgs/LogoNoTaglineSmall.png" > -->
-  <h3>Fit2Me</h3>
-  <h4>Workout your way</h4>
+  <img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
   
   <form class="form" [formGroup]="registerForm" (ngSubmit)="tryRegister(registerForm.value)">
 
