--- a/src/pages/update-workout-details/update-workout-details.html
+++ b/src/pages/update-workout-details/update-workout-details.html
@@ -9,6 +9,8 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 
 	<h3>Set Workout Preferences</h3>
 				<p>These will be use to help tailor your workouts.</p>
