--- a/src/pages/workout-detail/workout-detail.html
+++ b/src/pages/workout-detail/workout-detail.html
@@ -9,6 +9,8 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 <span id='centerAlign'>
 	
 	<h2>{{workoutName}}</h2>
