--- a/src/pages/workout-start/workout-start.html
+++ b/src/pages/workout-start/workout-start.html
@@ -9,6 +9,8 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 	<ion-slides #exerciseSlider pager=false>
 
 		<ion-slide *ngFor="let ex of exerciseInWorkoutDetail; let i = index let odd = odd"
