--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,6 +8,9 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
+
 	<!--Personal details section. -->
 	<h3>Your Details</h3>
 		<p class='displayItem'><label>Name: </label>{{user.name}}</p>
