--- a/src/pages/update-reminder-details/update-reminder-details.html
+++ b/src/pages/update-reminder-details/update-reminder-details.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the UpdateReminderDetailsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,6 +8,8 @@
 
 
 <ion-content padding>
+
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
 
 		<h3>Set Reminder Preferences</h3>
 			<p>Reminders will help to motivate you towards reaching you goal.</p>
