--- a/src/pages/update-user-details/update-user-details.html
+++ b/src/pages/update-user-details/update-user-details.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the UpdateUserDetailsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,6 +8,8 @@
 
 
 <ion-content padding>
+
+  <img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
 
 	<ion-item>
       <ion-label floating>Full Name</ion-label>
