--- a/src/pages/workout-history/workout-history.html
+++ b/src/pages/workout-history/workout-history.html
@@ -9,6 +9,8 @@
 
 <ion-content padding>
 
+  <img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 	<ion-card>
 		<ion-card-header>
 			<ion-card-title>Your Statistics</ion-card-title>
