--- a/src/pages/workout-plan/workout-plan.html
+++ b/src/pages/workout-plan/workout-plan.html
@@ -8,6 +8,8 @@
 
 <ion-content padding>
 
+	<img id='logo' alt="logo" src="/assets/imgs/Logo.png" > 
+
 	<ion-card class='cardTop'>
 		<ion-card-title>Your Preferences</ion-card-title>
 		<ion-card-content>
