--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,43 @@
 
 
   <h3>Welcome {{user.name}}</h3>
+  <h5>Your Dashboard</h5>
 
+<!--BADGES-->
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Your Badges</ion-card-title>
+    </ion-card-header>
+    <ion-card-content> 
+    <p>Get active to unlock some badges!</p>
+    <ion-grid><ion-row>
+      <ion-col>
+          <div>
+            <img [ngClass]='{notAchievedBadge: (goalStats.countOfGoals <1), badge: (goalStats.countOfGoals >0)}' src='../assets/imgs/badges/FirstGoalAchieved.png'><p>First Goal Completed</p>
+            <img [ngClass]='{notAchievedBadge: (goalStats.countOfGoals <10), badge: (goalStats.countOfGoals >9)}' src='../assets/imgs/badges/TenGoalsAchieved.png'><p>Ten Goals Completed</p>
+            <img [ngClass]='{notAchievedBadge: (goalStats.countOfGoals <50), badge: (goalStats.countOfGoals >49)}' src='../assets/imgs/badges/TenGoalsAchieved.png'><p>Fifty Goals Completed</p>
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+            <img [ngClass]='{notAchievedBadge: (workoutStats.countOfWorkout < 1), badge: (workoutStats.countOfWorkout > 0)}' src='../assets/imgs/badges/FirstWorkoutAchieved.png'><p>First Workout</p>
+            <img [ngClass]='{notAchievedBadge: (workoutStats.countOfWorkout < 10), badge: (workoutStats.countOfWorkout > 9)}' src='../assets/imgs/badges/TenWorkoutsAchieved.png'><p>Ten Workouts</p>
+            <img [ngClass]='{notAchievedBadge: (workoutStats.countOfWorkout < 50), badge: (workoutStats.countOfWorkout > 49)}' src='../assets/imgs/badges/TenWorkoutsAchieved.png'><p>Fifty Workouts</p>
+          </div>
+        </ion-col>
+        <ion-col>
+            <div>
+            <img [ngClass]='{notAchievedBadge: (updatedProfile == false), badge: (updatedProfile == true)}' src='../assets/imgs/badges/UpdatedProfile.png'><p>Updated details</p>
+            <img [ngClass]='{notAchievedBadge: (workoutStats.workoutLevel == "Beginner"), badge: (workoutStats.workoutLevel != "Beginner")}' src='../assets/imgs/badges/LevelUp.png'><p>Level up once</p>
+            <img [ngClass]='{notAchievedBadge: (workoutStats.workoutLevel != "Advanced"), badge: (workoutStats.workoutLevel == "Advanced")}' src='../assets/imgs/badges/LevelUp.png'><p>Level up twice</p>
+        </div>
+      </ion-col>
+    </ion-row></ion-grid>
+  </ion-card-content>
+  </ion-card>
+
+<!--Log latest workout again-->
   <ion-card>
     <ion-card-header>
       Log last workout again
@@ -21,9 +57,10 @@
     <ion-card-content>
         <h5>{{workoutStats.lastWorkoutName}}</h5>
         <button ion-button (click)="logLastWorkout(workoutStats)">Log last workout</button>
-
     </ion-card-content>
   </ion-card>
+
+<!--Workout History Graph-->
 
   <ion-card>
       <ion-card-header>
@@ -34,115 +71,6 @@
       </ion-card-content>
     </ion-card>
 
-  <ion-card>
-      <ion-card-header>
-        <ion-card-title>Weight History</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <canvas #lineCanvas></canvas>
-      </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Your workout level - {{workoutStats.workoutLevel}}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <h4><span class='bigger'>{{workoutStats.workoutsToNextLevel}} more workouts </span>until you level up - keep up the great work!</h4>
-      <canvas #doughnutCanvas></canvas>
-    </ion-card-content>
-  </ion-card>
-
-
-  <ion-card>
-    <ion-card-header>
-      BMI - Body Mass Index
-    </ion-card-header>
-    <ion-card-content>
-      <p>Weight - {{userHealthDetail.weight}}</p>
-      <p>Height - {{userHealthDetail.height}}</p>
-      <p class='bigger'>BMI - {{userHealthDetail.bmi}}</p>
-      <p class='bigger'>BMI Classification - {{userHealthDetail.bmiDescription}}</p>
-      <p>For more information on BMI you can visit the <a href="https://www.nhs.uk/live-well/healthy-weight/bmi-calculator/">NHS BMI site</a>.</p>
-    </ion-card-content>
-  </ion-card>
-
- <ion-card>
-    <ion-card-header>
-      BMR - Basal Metabolic Rate 
-    </ion-card-header>
-    <ion-card-content>
-      <p class='bigger'>{{userHealthDetail.bmr}} kcal</p>
-      <p>Basal metabolic rate (BMR) is the total number of calories that your body needs to perform basic, life-sustaining functions. These basal functions include circulation, breathing and sleeping.</p>
-      <p>For more information on BMR and your metabolism, visit the <a href="https://www.nhs.uk/live-well/healthy-weight/metabolism-and-weight-loss/">NHS Metabolism site</a>.</p>
-    </ion-card-content>
-  </ion-card>
-
-
-  <ion-card>
-    <ion-card-header>
-      Workout Summary 
-    </ion-card-header>
-    <ion-card-content>
-      <p><span class='bigger'>{{workoutStats.countOfWorkout}}</span> total workouts</p>
-      <p><span class='bigger'>{{workoutStats.lastWorkoutName}}</span> last workout</p>
-      <p><span class='bigger'>{{workoutStats.lastWorkoutDay}}</span> date of last workout</p>
-    </ion-card-content>
-  </ion-card>
-
-  <!--BADGES-->
-
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Your Badges</ion-card-title>
-    </ion-card-header>
-    <ion-card-content> 
-
-    <p>Get active to unlock some badges!</p>
-
-
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <div>
-            <img [ngClass]='{notAchievedBadge: (goalStats.countOfGoals <1), badge: (goalStats.countOfGoals >0)}' src='../assets/imgs/badges/FirstGoalAchieved.png'>
-            <p>First Goal Completed</p>
-            <img [ngClass]='{notAchievedBadge: (goalStats.countOfGoals <10), badge: (goalStats.countOfGoals >9)}' src='../assets/imgs/badges/TenGoalsAchieved.png'>
-            <p>Ten Goals Completed</p>
-            <img [ngClass]='{notAchievedBadge: (goalStats.countOfGoals <50), badge: (goalStats.countOfGoals >49)}' src='../assets/imgs/badges/TenGoalsAchieved.png'>
-            <p>Fifty Goals Completed</p>
-          </div>
-        </ion-col>
-        <ion-col>
-          <div>
-            <img [ngClass]='{notAchievedBadge: (workoutStats.countOfWorkout < 1), badge: (workoutStats.countOfWorkout > 0)}' src='../assets/imgs/badges/FirstWorkoutAchieved.png'>
-            <p>First Workout</p>
-
-            <img [ngClass]='{notAchievedBadge: (workoutStats.countOfWorkout < 10), badge: (workoutStats.countOfWorkout > 9)}' src='../assets/imgs/badges/TenWorkoutsAchieved.png'>
-            <p>Ten Workouts</p>
-
-            <img [ngClass]='{notAchievedBadge: (workoutStats.countOfWorkout < 50), badge: (workoutStats.countOfWorkout > 49)}' src='../assets/imgs/badges/TenWorkoutsAchieved.png'>
-            <p>Fifty Workouts</p>
-          </div>
-        </ion-col>
-        <ion-col>
-          <div>
-          <img [ngClass]='{notAchievedBadge: (updatedProfile == false), badge: (updatedProfile == true)}' src='../assets/imgs/badges/UpdatedProfile.png'>
-          <p>Updated health details</p>
-
-          <img [ngClass]='{notAchievedBadge: (workoutStats.workoutLevel == "Beginner"), badge: (workoutStats.workoutLevel != "Beginner")}' src='../assets/imgs/badges/LevelUp.png'>
-          <p>Leveled up once</p>
-
-          <img [ngClass]='{notAchievedBadge: (workoutStats.workoutLevel == "Intermediate"), badge: (workoutStats.workoutLevel == "Advanced")}' src='../assets/imgs/badges/LevelUp.png'>
-          <p>Leveled up twice</p>
-        </div>
-      </ion-col>
-      </ion-row>
-    </ion-grid>
-
-    </ion-card-content>
-  </ion-card>
-
 <!--REASONS TO WORKOUT-->
 
   <ion-card>
@@ -151,10 +79,8 @@
     </ion-card-header>
     <ion-card-content>
 
-    <!--Row 1 -->
     <ion-grid>
       <ion-row>
-
         <ion-col><div>
           <img class='dashboardImg' src="../assets/imgs/dashboard/weight-loss.png">
           <p>Lose body fat</p>
@@ -175,8 +101,70 @@
       </div></ion-col>
     </ion-row>
     </ion-grid>
+    </ion-card-content>
+  </ion-card>
 
+<!--Weight Graph-->
+  <ion-card>
+      <ion-card-header>
+        <ion-card-title>Weight History</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <canvas #lineCanvas></canvas>
+      </ion-card-content>
+  </ion-card>
 
+  <!--Workout Level-->
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Your workout level - {{workoutStats.workoutLevel}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <h4><span class='bigger'>{{workoutStats.workoutsToNextLevel}} more workouts </span>until you level up - keep up the great work!</h4>
+      <canvas #doughnutCanvas></canvas>
+    </ion-card-content>
+  </ion-card>
+
+  <!--BMI Data-->
+
+  <ion-card>
+    <ion-card-header>
+      BMI - Body Mass Index
+    </ion-card-header>
+    <ion-card-content>
+      <p>Weight - {{userHealthDetail.weight}}</p>
+      <p>Height - {{userHealthDetail.height}}</p>
+      <p class='bigger'>BMI - {{userHealthDetail.bmi}}</p>
+      <p class='bigger'>BMI Classification - {{userHealthDetail.bmiDescription}}</p>
+      <p>For more information on BMI you can visit the <a href="https://www.nhs.uk/live-well/healthy-weight/bmi-calculator/">NHS BMI site</a>.</p>
+      <p>BMI is only a guide, and may not be useful if you are of high bone density or muscle mass as this is not reflected in its scaling.</p>
+    </ion-card-content>
+  </ion-card>
+
+  <!--BMR Data-->
+
+ <ion-card>
+    <ion-card-header>
+      BMR - Basal Metabolic Rate 
+    </ion-card-header>
+    <ion-card-content>
+      <p class='bigger'>{{userHealthDetail.bmr}} kcal</p>
+      <p>Basal metabolic rate (BMR) is the total number of calories that your body needs to perform basic, life-sustaining functions. These basal functions include circulation, breathing and sleeping.</p>
+      <p>For more information on BMR and your metabolism, visit the <a href="https://www.nhs.uk/live-well/healthy-weight/metabolism-and-weight-loss/">NHS Metabolism site</a>.</p>
+    </ion-card-content>
+  </ion-card>
+
+  <!--Workout Summary-->
+
+  <ion-card>
+    <ion-card-header>
+      Workout Summary 
+    </ion-card-header>
+    <ion-card-content>
+      <p><span class='bigger'>{{workoutStats.countOfWorkout}}</span> total workouts</p>
+      <p><span class='bigger'>{{workoutStats.lastWorkoutName}}</span> last workout</p>
+      <p><span class='bigger'>{{workoutStats.lastWorkoutDay}}</span> date of last workout</p>
     </ion-card-content>
   </ion-card>
   
