Updates to custom goal display

--- a/src/pages/goals/goals.html
+++ b/src/pages/goals/goals.html
@@ -61,7 +61,7 @@
   <div *ngFor="let x of otherGoalData">
   <ion-card class='active'>
     <ion-card-header>
-      <ion-card-title>{{x.name}} - {{x.otherTarget}}</ion-card-title>
+      <ion-card-title>{{x.name}} - {{x.goalDescription}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
 
@@ -126,7 +126,7 @@
     
   <ion-card class='complete'>
     <ion-card-header>
-    <ion-card-title>{{x.name}} - {{x.otherTarget}}</ion-card-title>
+    <ion-card-title>{{x.name}} - {{x.goalDescription}}</ion-card-title>
   </ion-card-header>
     <ion-card-content>
       <p><b>Description:</b> {{x.goalDescription}}</p>
