Changed wording on dashboard.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
       <ion-card-title>Your Badges</ion-card-title>
     </ion-card-header>
     <ion-card-content> 
-    <p>Get active to unlock some badges!</p>
+    <p>Get active to unlock more badges!</p>
     <ion-grid><ion-row>
       <ion-col>
           <div>
