--- a/src/pages/password-reset/password-reset.html
+++ b/src/pages/password-reset/password-reset.html
@@ -18,6 +18,6 @@
       <ion-input [(ngModel)]="email" type="text"></ion-input>
     </ion-item>
 
-    <button ion-button (click)="sendPasswordLink(email)">Send Password Reset Link</button>
+    <button ion-button [disabled]="!email" (click)="sendPasswordLink(email)">Send Password Reset Link</button>
 
 </ion-content>
