--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -22,6 +22,10 @@
       <ion-label floating>Password</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label floating>Confirm Password</ion-label>
+      <ion-input type="password" formControlName="passwordConfirm" class="form-controll"></ion-input>
+    </ion-item>
 
     <button ion-button block class="submit-button" type="submit">Register</button>
     <label class="error-message">{{errorMessage}}</label>
